# no-OS-FatFS-SD-SPI-RPi-Pico

./: .gitignore  CMakeLists.txt  README.md  data_log_demo.c  library.json  no-OS-FatFS.c
FatFs_SPI/: CMakeLists.txt
FatFs_SPI/SdFat/: SdCardInfo.h  bench.c
FatFs_SPI/ff14a/source/: ffconf.h
FatFs_SPI/ff15/source/: ffconf.h  ffsystem.c
FatFs_SPI/include/: f_util.h  ff_headers.h  ff_stdio.h  my_debug.h  rtc.h  util.h
FatFs_SPI/sd_driver/: crc.h  demo_logging.c  hw_config.c  hw_config.h  sd_card.c  sd_card.h  sd_spi.c  sd_spi.h  spi.c  spi.h
FatFs_SPI/sd_driver/SDIO/: LICENSE  README.md  SdioCard.h  ZuluSCSI_log.h  ZuluSCSI_platform.cpp  ZuluSCSI_platform.h  rp2040_sdio.c  rp2040_sdio.h  rp2040_sdio.pio  rp2040_sdio.pio.h  sd_card_sdio.c
FatFs_SPI/sd_driver/SDIO/SdCard/: SdCardInfo.c
FatFs_SPI/sd_driver/SPI/: sd_card_spi.c  sd_card_spi.h  sd_spi.c  spi.c  spi.h
FatFs_SPI/src/: f_util.c  ff_stdio.c  glue.c  my_debug.c  rtc.c
dynamic_config_example/: CMakeLists.txt  dynamic_config_example.cpp  hw_config.cpp  thing_plus.dynamic_config_example.cpp
example/: CMakeLists.txt  FatFS_SPI_example.c  FatFS_SPI_example.cpp  data_log_demo.c  dev_brd.hw_config.c  exp_mod_A.hw_config.c  hw_config.c  maker_pi_pico.hw_config.c  thing_plus.hw_config.c
example/tests/: CreateAndVerifyExampleFiles.c  app4-IO_module_function_checker.c  big_file_test.c  ff_stdio_tests_with_cwd.c  simple.c
examples/PlatformIO/bench2/: platformio.ini
examples/PlatformIO/bench2/src/: main.cpp
examples/PlatformIO/data_logger/: platformio.ini
examples/PlatformIO/data_logger/src/: main.cpp
examples/PlatformIO/hw_debug/: platformio.ini
examples/PlatformIO/hw_debug/src/: main.cpp
examples/PlatformIO/one_SDIO/: platformio.ini
examples/PlatformIO/one_SDIO/src/: main.cpp
examples/PlatformIO/one_SPI/: platformio.ini
examples/PlatformIO/one_SPI.C++/: platformio.ini
examples/PlatformIO/one_SPI.C++/src/: main.cpp
examples/PlatformIO/one_SPI/src/: main.cpp
examples/PlatformIO/one_SPI_one_SDIO/: platformio.ini
examples/PlatformIO/one_SPI_one_SDIO - C++/: platformio.ini
examples/PlatformIO/one_SPI_one_SDIO - C++/src/: main.cpp
examples/PlatformIO/one_SPI_one_SDIO.C++/: platformio.ini
examples/PlatformIO/one_SPI_one_SDIO.C++/src/: main.cpp
examples/PlatformIO/one_SPI_one_SDIO/src/: main.cpp
examples/command_line/: CMakeLists.txt  data_log_demo.c  dev_brd.hw_config.c  exp_mod_A.hw_config.c  hw_config.c  main.cpp  maker_pi_pico.hw_config.c  thing_plus.hw_config.c
examples/command_line/tests/: CreateAndVerifyExampleFiles.c  app4-IO_module_function_checker.c  bench.c  big_file_test.c  ff_stdio_tests_with_cwd.c  tests.h
examples/dynamic_config/: CMakeLists.txt  main.cpp
examples/dynamic_config_example/: CMakeLists.txt  dynamic_config_example.cpp
examples/example/: CMakeLists.txt  FatFS_SPI_example.cpp  hw_config.c
examples/example/tests/: app4-IO_module_function_checker.c  big_file_test.c
examples/simple/: CMakeLists.txt  hw_config.c  thing_plus.hw_config.c
ff14a/source/: ffconf.h
include/: FatFs.h  FatFsSd.h  FatFsSd_C.h  FatFs_C.h  ff.h  ffconf.h
sd_driver/: hw_config.c  hw_config.h  sd_card.c  sd_card.h  sd_spi.c  sd_spi.h  spi.c
simple_example/: CMakeLists.txt  hw_config.c  simple_example.cpp  thing_plus.hw_config.c
src/: CMakeLists.txt  FatFs.cpp  FatFsSd.cpp  ff_stdio.c  ff_util.c  glue.c  rtc.c
src/SdFat/: bench.c
src/ff15/documents/res/: app4.c
src/ff15/source/: ffconf.h
src/include/: ffconf.h  my_debug.h  util.h
src/sd_driver/: hw_config.h  sd_card.c  sd_card.h
src/sd_driver/SDIO/: SdioCard.h  rp2040_sdio.c  rp2040_sdio.h  rp2040_sdio.pio  rp2040_sdio.pio.h  sd_card_sdio.c
src/sd_driver/SPI/: crc.c  sd_card_constants.h  sd_card_spi.c  sd_card_spi.h  sd_spi.c  sd_spi.h  spi.c  spi.h
src/source/: FatFsSd.cpp  glue.c  my_debug.c  util.c
src/src/: glue.c
src/tests/: CreateAndVerifyExampleFiles.c  bench.c  simple.c
tests/: CreateAndVerifyExampleFiles.c  app4-IO_module_function_checker.c  big_file_test.c  ff_stdio_tests_with_cwd.c  filesystem_test_suite.c  mt_lliot.c  my_test.c  simple.c
